Fixed bugs and fonts and alignment

--- a/game/src/style.css
+++ b/game/src/style.css
@@ -4,19 +4,15 @@ body {
   margin: 0;
   color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 #instructions {
   display: none;
 }
 
-#results,
-body #instructions {
+#results, #instructions {
   position: fixed;
   display: flex;
-  align-items: flex-end;
-  justify-content: center;
   height: 100%;
   width: 100%;
   background-color: rgba(20, 20, 20, 0.75);
@@ -28,11 +24,11 @@ a:visited {
 
 #results {
   display: none;
-  cursor: default;
 }
 
 #results .content,
 #instructions .content {
+
   max-width: 300px;
   padding: 50px;
   border-radius: 20px;
@@ -45,16 +41,16 @@ a:visited {
   color: white;
   font-size: 3em;
   font-weight: bold;
-  top: 100px;
+  top: 80px;
 }
 
 .tapToPlay {
   position: relative;
-  left:calc((100% - 100%) / 2);
+  left: calc((100% - 100%) / 2);
   width: 100%;
   height: 60px;
   font: normal normal 26px Verdana;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   border: 0px;
   color: white;
   background: #00c127;
@@ -70,15 +66,29 @@ a:visited {
   padding-left: 10px;
 }
 
-div p {
+.mainMessage {
+  top: calc((100% - 100px) / 2);
   text-align: center;
-  font-size: 20px;
-  margin-bottom: 300px;
+  align-items: center;
+  font-size: 18px;
+  height: auto;
+  margin: 0 auto;
+  padding: 10px;
+  position: relative;
+}
+
+.bottomButton {
+  width: 80%;
+  left: calc((100% - 80%) / 2);
+  bottom: 50px;
+  text-align: center;
+  align-items: center;
+  font-size: 18px;
+  position: absolute;
 }
 
 div h2 {
   text-align: center;
-  font: normal bold 50px Verdana;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font: normal bold 26px "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
 }
